Fix searchbar alignment on small screens

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -165,6 +165,10 @@ img.sidebar-avatar {
     margin-left: 7px;
     font-size: 25px;
   }
+
+  .navbar-form input.form-control {
+    margin-left: 15px;
+  }
 }
 
 /* FORM */
